# rag-cli

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.md
.github/workflows/: python-build.yml  python-publish.yml
docker/: Dockerfile.ollama  Dockerfile.qdrant
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
rag_cli/: vector_store.py
scripts/: ollama_chat_startup.sh  ollama_embedding_startup.sh  qdrant_startup.sh  run_pipeline.sh
src/app/: cli.py  main.py  run_embedder.py
src/rag_cli/: cli.py  embedder.py  main.py  rag.py  vector_store.py
src/scripts/: ollama_startup.sh  qdrant_statup.sh  run_pipeline.sh
