[tool.poetry]
name = "rag-cli"
version = "0.2.2"
description = "A project to show good CLI practices with a fully fledged RAG system."
readme = "README.md"
license = "OSI Approved :: GNU Affero General Public License v3"
keywords = ["CLI", "RAG", "LLM", "vector database", "ollama"]
authors = ["Oliver Kenyon Wilkins <okwilkins@googlemail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
qdrant-client = ">=1.9.0"
ollama = ">=0.1.0"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0"
pytest = ">=8.1.0"
mypy = ">=1.9.0"


[project.urls]
"Homepage" = "https://github.com/okwilkins/python-gnu-parallel"
"Say Thanks!" = "http://okwilkins.dev"
"Source" = "https://github.com/okwilkins/python-gnu-parallel"


[project.scripts]
rag-cli = "rag_cli.main:main"


[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true
